--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,16 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+rest-server/.gradle
+rest-server/.idea
+rest-server/build
+rest-server/*.jar
+rest-server/*.war
+rest-server/*.nar
+rest-server/*.ear
+rest-server/*.zip
+rest-server/*.tar.gz
+rest-server/*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
