--- a/rest-server/.gitignore
+++ b/rest-server/.gitignore
@@ -1,9 +1,9 @@
 HELP.md
-rest-server/.gradle
-rest-server/build/
-rest-server/!gradle/wrapper/gradle-wrapper.jar
-rest-server/!**/src/main/**/build/
-rest-server/!**/src/test/**/build/
+/.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### STS ###
 rest-server/.apt_generated
@@ -18,13 +18,13 @@ rest-server/!**/src/main/**/bin/
 rest-server/!**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-rest-server/.idea
-rest-server/*.iws
-rest-server/*.iml
-rest-server/*.ipr
-rest-server/out/
-rest-server/!**/src/main/**/out/
-rest-server/!**/src/test/**/out/
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
