--- a/rest-server/src/main/resources/application.yaml
+++ b/rest-server/src/main/resources/application.yaml
@@ -1,1 +1,73 @@
+logging:
+  level:
+    blog: WARN
+    org: WARN
+spring:
+  application:
+    name: "Family Task Organizer"
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/ftoDb?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=TRUE
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD}
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: false
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    defer-datasource-initialization: true
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+        logging:
+          level:
+            org.hibernate.SQL:debug
+            org.hibernate.type.descriptor.sql.BasicBinder:debug
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+  #  security:
+  #    oauth2:
+  #      client:
+  #        registration:
+  #          facebook:
+  #            client-id: ${FACEBOOK_ID}
+  #            client-secret: ${FACEBOOK_SECRET}
 
+
+  sql:
+    init:
+      mode: never
+
+#mail:
+#  host: mail.boxerclub-bg.org
+#  username: office@boxerclub-bg.org
+#  password: ${MAIL_PASSWORD}
+#  port: 587
+
+#app:
+#  admin:
+#    password: ${ADMIN_PASSWORD}
+#  token:
+#    secretKey: ${TOKEN_SECRET}
+#  url: ${APP_URL}
+
+server:
+  port: 8000
+  error:
+    include-binding-errors: always
+    include-message: always
+    whitelabel:
+      enabled: off
+
+cloudinary:
+  cloud-name: "${CLOUD_NAME}"
+  api-key: "${CLOUD_API_KEY}"
+  api-secret: "${CLOUD_API_SECRET}"
