--- a/rest-server/src/main/resources/application.yml
+++ b/rest-server/src/main/resources/application.yml
@@ -52,11 +52,11 @@ spring:
 #  password: ${MAIL_PASSWORD}
 #  port: 587
 
-#app:
-#  admin:
-#    password: ${ADMIN_PASSWORD}
-#  token:
-#    secretKey: ${TOKEN_SECRET}
+app:
+  admin:
+    password: ${ADMIN_PASSWORD}
+  token:
+    secretKey: ${TOKEN_SECRET}
 #  url: ${APP_URL}
 
 server:
