--- a/rest-server/src/main/resources/application.yml
+++ b/rest-server/src/main/resources/application.yml
@@ -32,14 +32,13 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 5MB
-  #  security:
-  #    oauth2:
-  #      client:
-  #        registration:
-  #          facebook:
-  #            client-id: ${FACEBOOK_ID}
-  #            client-secret: ${FACEBOOK_SECRET}
-
+  security:
+    oauth2:
+      client:
+        registration:
+           google:
+             client-id: ${GOOGLE_ID}
+             client-secret: ${GOOGLE_SECRET}
   sql:
     init:
       mode: never
@@ -56,6 +55,9 @@ app:
     password: ${ADMIN_PASSWORD}
   token:
     secretKey: ${TOKEN_SECRET}
+  google:
+    client-id: ${GOOGLE_ID}
+    client-secret: ${GOOGLE_SECRET}
 #  url: ${APP_URL}
 
 server:
