--- a/rest-client/package.json
+++ b/rest-client/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.16.1",
     "bootstrap": "^5.3.3",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
